--- a/src/main/resources/templates/components/navbar.html
+++ b/src/main/resources/templates/components/navbar.html
@@ -3,7 +3,7 @@
 		<div class="container" style="margin-top: 0em;">
 			<a class="navbar-brand mb-0 h1" href="/">Ausys</a>
 			<div class="text-white" sec:authorize="isAnonymous()">
-				<a class="text-white" href="/login">Iniciar Sesion</a>
+				<a class="text-white" href="/login">Iniciar Sesión</a>
 			</div>
 
 			<div class="collapse navbar-collapse">
