--- a/src/main/resources/templates/IngresarDesaparecido.html
+++ b/src/main/resources/templates/IngresarDesaparecido.html
@@ -89,7 +89,7 @@
 
                     <br>
 
-                    <label class="col-form-label">Municipio:</label>
+                    <label class="col-form-label">Municipio donde reside:</label>
                     <select class="form-control" id="municipioSelect" th:field="*{municipio.id_municipio}">
                         <option value="0">Selecciona una opci&oacute;n</option>
                         <option th:each="municipio : ${municipios}" th:id="${municipio.departamento.id_departamento}"
