--- a/src/main/resources/templates/listaRegistros.html
+++ b/src/main/resources/templates/listaRegistros.html
@@ -51,7 +51,7 @@
                         </option>
                     </select>
                     <br>
-                    <label>Sexo según DUI: </label>
+                    <label>Sexo: </label>
                     <input type="radio" th:value="Ambos" name="sexo" th:id="Ambos" checked>
                     <label th:for="Ambos" th:text="Ambos"></label>
                     <div th:each="sexo : ${listaSexo}">
