--- a/src/main/resources/templates/busquedaP.html
+++ b/src/main/resources/templates/busquedaP.html
@@ -38,7 +38,7 @@
             <br>
             <!--Nombre-->
             <form th:action="@{/show/busquedaPeritajes}" method="post" id="nombresid">
-                <label>Nombre del afectado: </label>
+                <label>Nombres o Apellidos del afectado: </label>
                 <input type="text" placeholder="Nombre" th:name="nombre_registro" class="form-control">
                 <br>
                 <label for="tipo_de_caso">Tipo de caso: </label>
