--- a/src/main/resources/templates/charts.html
+++ b/src/main/resources/templates/charts.html
@@ -70,11 +70,11 @@
 						<table class="table">
 							<thead class="thead-dark">
 								<tr>
-									<th scope="col">Cantidad de mujeres</th>
-									<th scope="col">Cantidad de hombres</th>
-									<th scope="col">Cantidad de hombres</th>
-									<th scope="col">Cantidad de hombres</th>
-									<th scope="col">Cantidad de hombres</th>
+									<th scope="col">Análisis toxicólogico</th>
+									<th scope="col">Análisis toxicólogico medio Ambientales</th>
+									<th scope="col">Asistencia a vistas públicas</th>
+									<th scope="col">Examenes odontológicos</th>
+									<th scope="col">Desaparecido</th>
 								</tr>
 							</thead>
 							<tbody>
